// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox component should render a Normal message 1`] = `
<StyledMessageBoxContainer
  className=""
  onClick={null}
  onKeyPress={null}
>
  <StyledMessageBoxAvatarContainer
    position="left"
  >
    <Avatar
      alt=""
      className="LT-Avatar-Container"
      color={null}
      size="xsmall"
      sizes={null}
      src="https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg"
      srcSet={null}
      status=""
      type="circle"
      withStatus={false}
    />
  </StyledMessageBoxAvatarContainer>
  <NormalMessageBox
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "position": "left",
        "status": "read",
        "type": "Text",
      }
    }
    onActionMessageClick={null}
    onClick={null}
    onDownload={null}
    onForwardClick={null}
    onMessageClick={null}
    onOpen={null}
    onTitleClick={null}
    person={null}
    position="left"
    text=""
    type="text"
  />
</StyledMessageBoxContainer>
`;

exports[`MessageBox component should render a System message 1`] = `
<StyledMessageBoxContainer
  className=""
  onClick={null}
  onKeyPress={null}
>
  <SystemMessage
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "position": "left",
        "status": "read",
        "type": "System",
      }
    }
    onMessageClick={null}
    person={null}
    position="left"
    text=""
    type="text"
  />
</StyledMessageBoxContainer>
`;

exports[`MessageBox component should render a Time message 1`] = `
<StyledMessageBoxContainer
  className=""
  onClick={null}
  onKeyPress={null}
>
  <StyledMessageBoxAvatarContainer
    position="right"
  >
    <Avatar
      alt=""
      className="LT-Avatar-Container"
      color={null}
      size="xsmall"
      sizes={null}
      src="https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg"
      srcSet={null}
      status=""
      type="circle"
      withStatus={false}
    />
  </StyledMessageBoxAvatarContainer>
  <TimeMarkMessage
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "position": "right",
        "status": "read",
        "type": "Time",
      }
    }
    onMessageClick={null}
    person={null}
    position="left"
    text=""
    type="text"
  />
</StyledMessageBoxContainer>
`;
